--- a/notebooks/06_load_excel_files/06_load_excel_files.ipynb
+++ b/notebooks/06_load_excel_files/06_load_excel_files.ipynb
@@ -3,6 +3,14 @@
   "kernelspec": {
    "display_name": "Streamlit Notebook",
    "name": "streamlit"
+  },
+  "lastEditStatus": {
+   "notebookId": "wd4dwfpna7hjchcsjh7w",
+   "authorId": "5180051441182",
+   "authorName": "AKSHITHABEDRE05",
+   "authorEmail": "akshithabedre05@gmail.com",
+   "sessionId": "5e53f90e-cadd-42fb-a84a-4de3a369b229",
+   "lastEditTime": 1750808704468
   }
  },
  "nbformat_minor": 5,
@@ -110,7 +118,7 @@
     "name": "sql_debugging"
    },
    "outputs": [],
-   "source": "--DESCRIBE TABLE LOCATION;\n--SELECT * FROM LOCATION;\n--SHOW TABLES;",
+   "source": "--DESCRIBE TABLE LOCATION;\n--SELECT * FROM LOCATION;\nSHOW TABLES;",
    "execution_count": null
   }
  ]
